# ahq-ai

./: .gitignore  README.md  client.yml  genClientTag.ps1  genServerTag.ps1  prebuild.ps1  serverMatrix.cjs
.github/workflows/: client.yml  pages.yml  server.yml
ahqai-admin/: Cargo.toml
ahqai-admin/src/: main.rs
ahqai-admin/src/api/: copy.rs  mod.rs
ahqai-admin/src/management/: general.rs  mod.rs  user.rs
ahqrt/: Cargo.toml  r.rs
ahqrt/libahqc/: Cargo.toml
ahqrt/libahqc/src/: lib.rs
ahqrt/libc/: build.rs
ahqrt/libc/src/: lib.rs
ahqrt/src/: lib.rs
ahqrt/src/arc/: mod.rs  win32.rs
ahqrt/src/boxed/: mod.rs
ahqrt/src/string/: str.rs
ahqrt/src/vector/: mod.rs
ahqrt_sys/: Cargo.toml
client/: .gitignore  .glf.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: global.css  licenses.txt  main.tsx
client/src-plugin/: Cargo.toml  README.md  build.rs  package.json
client/src-plugin/android/: build.gradle.kts  local.properties
client/src-plugin/android/src/androidTest/java/: ExampleInstrumentedTest.kt
client/src-plugin/android/src/main/java/: AhqAi.kt
client/src-plugin/android/src/test/java/: ExampleUnitTest.kt
client/src-plugin/guest-js/: index.ts
client/src-plugin/ios/: Package.swift  README.md
client/src-plugin/ios/Sources/: AhqAi.swift
client/src-plugin/permissions/: default.toml
client/src-plugin/permissions/autogenerated/: reference.md
client/src-plugin/permissions/autogenerated/commands/: check_file_integrity.toml  check_resp_integrity.toml
client/src-plugin/permissions/schemas/: schema.json
client/src-plugin/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs
client/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
client/src/App/: index.tsx
client/src/App/App/: Sidebar.tsx  index.tsx
client/src/App/App/Chat/: index.tsx
client/src/App/App/Settings/: AddServer.tsx  ServerBlob.tsx  index.tsx
client/src/App/Splash/: index.tsx
client/src/App/server/: index.ts  kbd.ts  key.ts
client/src/App/store/: index.ts  key.ts  state.ts
client/src/App/theme/: index.tsx
client/src/components/: category.tsx
client/src/components/responsive/: dialog.tsx
client/src/css/: app.css
docs/: package.json  pnpm-lock.yaml
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  style.css
docs/components/: Select.vue
docs/src/: clientsetup.md  docs.md  download.md  examples.md  index.md  serversetup.md
docs/src/contributing/: index.md
docs/src/docs/: iossetup.md  serversetup.md
docs/src/install/: ios.md  mac.md
docs/src/public/: ahqai_win32.crt  keys.integrity  keys.json
getllamacpp/: .gitignore  Cargo.toml  r.rs
getllamacpp/src/: main.rs
getllamacpp/src/compile/: mod.rs
getllamacpp/src/download/: mod.rs
keygen/: crypto.js  genKeyPair.js  load.js  package.json  pnpm-lock.yaml
libahqrt/: Cargo.toml
llama-test/: Cargo.toml
llama-test/src/: main.rs  structs.rs
server/: .gitignore  Cargo.toml  accounts.jsonl  authdata.jsonl  build.rs  config copy.json  config.json  database_conf.json  r.rs
server/src/: log.rs  main.rs
server/src/auth/: argon.rs  hash.rs  mod.rs
server/src/auth/authserver/: mod.rs
server/src/auth/authserver/moka/: mod.rs
server/src/auth/authserver/mongodb/: mod.rs
server/src/auth/authserver/tikv/: mod.rs
server/src/auth/cache/: mod.rs
server/src/auth/cache/moka/: mod.rs
server/src/auth/cache/redis/: mod.rs
server/src/server/: apiset.rs  mod.rs
server/src/server/admin/: mod.rs
server/src/server/auth/: mod.rs
server/src/server/chat/: mod.rs  ollama.rs
server/src/server/http/: mod.rs  structs.rs
server/src/server/llama/: mod.rs  structs.rs
server/src/structs/: db.rs  error.rs  mod.rs
server/src/ui/: bind.rs  lazy.rs  mod.rs  ollama.rs  performance.rs
server/src/ui/auth/: mod.rs  open.rs  token.rs  user.rs
server/src/ui/dbconf/: mod.rs  tls.rs  url.rs
server/src/ui/llama/: manager.rs  mod.rs  model.rs
server/src/ui/ollama/: mod.rs  model.rs
sherpa/: .gitignore  Cargo.toml
sherpa/sherpac/: .gitignore  Cargo.toml  build.rs  header.h
sherpa/sherpac/examples/: online.rs  simple.rs
sherpa/sherpac/src/: lib.rs  raw.rs
sherpa/sherpac/src/model/: mod.rs
sherpa/sherpac/src/recognizer/: mod.rs
sherpa/sherpac/src/stream/: mod.rs  online.rs
sherpa/sherpac/src/transducer/: mod.rs
sherpa/src/: main.rs
(+1 files in other folders)
