[package]
name = "ahqai-admin"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = [
  "A. Chakraborty <ahqsecret@gmail.com> @ahqsoftwares",
  "AHQ Softwares' Team",
  "AHQ AI Contributors",
  "Open Sourced Contributors",
]

[dependencies]
cursive = "^0.21"
cursive-tabs = "^0.8"
reqwest = { version = "^0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
