[package]
name = "getllamacpp"
version = "0.1.0"
edition = "2024"

[dependencies]
inquire = "^0.9"
reqwest = { version = "^0.12", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
tokio = { version = "^1", features = [
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
  "macros",
] }
zip = "^6"
