[package]
name = "ahqai-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "^4"
actix-ws = "^0.3"

bcrypt = "^0.17"
rand = "^0.9"
base64 = "^0.22"

cursive = "^0.21"
cursive-tabs = "^0.8"

redis = "^0.32"
moka = { version = "^0.12", features = ["future"] }

ollama-rs = { version = "^0.3", git = "https://github.com/pepperoni21/ollama-rs", features = [
  "stream",
] }

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
ciborium = "^0.2"

async-recursion = "^1"
tokio = { version = "^1", features = ["fs", "sync", "rt"] }
thiserror = "^2"
chalk_rs = "^1"
crossbeam-channel = "^0.5"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
