[package]
name = "ahqai-server"
version = "0.1.3"
edition = "2024"
license = "GPL-3.0"
authors = ["A. Chakraborty", "AHQ AI"]

[dependencies]
actix-web = "^4"
actix-ws = "^0.3"

bcrypt = "^0.17"
rand = "^0.9"
base64 = "^0.22"
ed25519-dalek = "^2"

rpassword = "^7"
secrecy = "^0.10"

cursive = "^0.21"
cursive-tabs = "^0.8"

redis = { version = "^0.32", features = ["aio", "tokio-comp"] }
tikv-client = "^0.3"
mongodb = "^3"
moka = { version = "^0.12", features = ["future"] }

ollama-rs = { version = "^0.3", git = "https://github.com/pepperoni21/ollama-rs", features = [
  "stream",
] }

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
bson = "^3"
ciborium = "^0.2"

async-recursion = "^1"
async-stream = "^0.3"
async-trait = "^0.1"
tokio = { version = "^1", features = ["fs", "sync", "rt"] }
thiserror = "^2"
chalk_rs = "^1"
crossbeam-channel = "^0.5"
futures = "^0.3"

fern = "^0.7"
log = "^0.4"

libloading = "^0.8"
ahqrt_sys = { version = "^0.1", path = "../ahqrt_sys" }

[profile.release]
debug = false
debug-assertions = false
strip = "symbols"
opt-level = 3
lto = true
codegen-units = 1
