[package]
name = "tauri-plugin-ahqai"
version = "0.1.0"
authors = [
  "A. Chakraborty",
  "Rohan M.",
  "AHQ AI Team and Open Sourced Contributors",
]
description = "A plugin to export things"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-ahqai"

[dependencies]
tauri = { version = "^2" }
serde = "^1"
thiserror = "^2"

# Encryption Scheme
ed25519-dalek = "^2"
base64 = "^0.22"

[build-dependencies]
tauri-plugin = { version = "^2", features = ["build"] }
